_randomgen/randomgen/src/dsfmt/dSFMT.h

#define DSFMT_MEXP 19937
/*-----------------
  BASIC DEFINITIONS
  -----------------*/
/* Mersenne Exponent. The period of the sequence
 *  is a multiple of 2^DSFMT_MEXP-1.
 * #define DSFMT_MEXP 19937 */
/** DSFMT generator has an internal state array of 128-bit integers,
 * and N is its size. */
#define DSFMT_N ((DSFMT_MEXP - 128) / 104 + 1)
/** N64 is the size of internal state array when regarded as an array
 * of 64-bit integers.*/
#define DSFMT_N64 (DSFMT_N * 2)
typedef unsigned int uint32_t;
typedef unsigned __int64 uint64_t;
/** 128-bit data structure */
union W128_T {
  vector unsigned int s;
  uint64_t u[2];
  uint32_t u32[4];
  double d[2];
};
/** 128-bit data structure */
union W128_T {
  __m128i si;
  __m128d sd;
  uint64_t u[2];
  uint32_t u32[4];
  double d[2];
};
/** 128-bit data structure */
union W128_T {
  uint64_t u[2];
  uint32_t u32[4];
  double d[2];
};
/** 128-bit data type */
typedef union W128_T w128_t;
/** the 128-bit internal state array */
struct DSFMT_T {
  w128_t status[DSFMT_N + 1];
  int idx;
};
typedef struct DSFMT_T dsfmt_t;
DSFMT_PRE_INLINE void dsfmt_init_gen_rand(dsfmt_t *dsfmt,
                                          uint32_t seed) DSFMT_PST_INLINE;
DSFMT_PRE_INLINE void dsfmt_init_by_array(dsfmt_t *dsfmt, uint32_t init_key[],
                                          int key_length) DSFMT_PST_INLINE;
/**
 * This function initializes the internal state array with a 32-bit
 * integer seed.
 * @param dsfmt dsfmt state vector.
 * @param seed a 32-bit integer used as the seed.
 */
inline static void dsfmt_init_gen_rand(dsfmt_t *dsfmt, uint32_t seed) {
  dsfmt_chk_init_gen_rand(dsfmt, seed, DSFMT_MEXP);
}
/**
 * This function initializes the internal state array,
 * with an array of 32-bit integers used as the seeds.
 * @param dsfmt dsfmt state vector
 * @param init_key the array of 32-bit integers, used as a seed.
 * @param key_length the length of init_key.
 */
inline static void dsfmt_init_by_array(dsfmt_t *dsfmt, uint32_t init_key[],
                                       int key_length) {
  dsfmt_chk_init_by_array(dsfmt, init_key, key_length, DSFMT_MEXP);
}
union random_val_t {
  double d;
  uint64_t u64;
};
typedef struct s_dsfmt_state {
  dsfmt_t *state;
  int has_uint32;
  uint32_t uinteger;

  double *buffered_uniforms;
  int buffer_loc;
} dsfmt_state;
static inline double dsfmt_next_double(dsfmt_state *state) {
  return dsfmt_next_buffer(state) - 1.0;
}
static inline uint64_t dsfmt_next64(dsfmt_state *state) {
  /* Discard bottom 16 bits */
  uint64_t out;
  union random_val_t rv;
  rv.d = dsfmt_next_buffer(state);
  out = (rv.u64 >> 16) << 32;
  rv.d = dsfmt_next_buffer(state);
  out |= (rv.u64 >> 16) & 0xffffffff;
  return out;
}
static inline uint32_t dsfmt_next32(dsfmt_state *state) {
  /* Discard bottom 16 bits */
  union random_val_t rv;
  rv.d = dsfmt_next_buffer(state);
  // uint64_t *out = (uint64_t *)&d;
  return (uint32_t)((rv.u64 >> 16) & 0xffffffff);
}
static inline uint64_t dsfmt_next_raw(dsfmt_state *state) {
  union random_val_t rv;
  rv.d = dsfmt_next_buffer(state);
  return rv.u64;
}
void dsfmt_jump(dsfmt_state *state);